--- a/app/src/index.css
+++ b/app/src/index.css
@@ -15,14 +15,6 @@ h1 {
     margin-top: 4rem;
 }
 
-.response-text{
-    color: white;
-    font-size: 1.5rem;
-    margin-top: 2.5rem;
-    padding-top: 1rem;
-    text-align: center;
-}
-
 .eyes {
     width: 100%;
     height: 200px;
@@ -82,6 +74,36 @@ h1 {
     gap: 10px;
 }
 
+.agent-history {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    color: white;
+}
+
+.agent-request {
+    color: white;
+    display: flex;
+    font-size: 1.5rem;
+    padding: 0.5rem;
+    background: #171717;
+    margin-left: 30%;
+    border-radius: 1.5rem;
+    margin-top: 10px;
+    text-align: start;
+}
+
+.agent-response {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    align-items: start;
+    color: white;
+    font-size: 1.5rem;
+    padding-top: 1rem;
+    text-align: start;
+}
+
 .wallet-buttons button{
     min-width: 10rem;
 }
@@ -93,24 +115,6 @@ h1 {
     width: 10rem;
     height: auto;
     z-index: 10;
-}
-
-.spinner {
-    border: 4px solid rgba(0, 0, 0, 0.1);
-    width: 36px;
-    height: 36px;
-    border-radius: 50%;
-    border-left-color: #09f;
-    animation: spin 1s ease infinite;
-}
-
-@keyframes spin {
-    0% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(360deg);
-    }
 }
 
 .interact-agent {
